 o added file/export/roster menu command
 o added search previous
 o added menu to increase the smallest font sizes in two steps
 o added SOCKS proxy, compatible with SimpLite-Jabber
 o cleaner groupchat dialog with new methods to set subject and nickname
 o added collapsable and flexible toolbars
 o chat subject now set by pressing Return in subject field

Coccinella-0.95.15 (20061117):

 o added option to avoid saving password when registering
 o added Jabber/Register/ICQ,MSN,... sub menus
 o lot of fixes to iaxclient voip part
 o more robust TLS negotiation on slow networks
 o now the complete prefs folder can be stored on a removable drive

Coccinella-0.95.14 (20061010):

 o support for DNS SRV and TXT (HTTP) lookup
 o pubsub library support
 o library support for JEP-0138: Stream Compression
 o text search in history and chat dialogs
 o parsing xmpp URIs updated to RFC 4622; added in text xmpp URI parsing
 o added code for JEP-0147: XMPP URI Scheme Query Components 
 o in-text parsing of mailto and im URI's
 o added metakit whiteboard file format for single file storage
 o complete inbox now stored as a single file metakit database
 o inbox can be exported to xml file
 o new xml based chat log format
 o added support for pep/mood

Coccinella-0.95.13 (20060622):

 o Critical bugfix for iaxclient on linux systems without audio support

Coccinella-0.95.12 (20060616):

 o new application theme engine
 o systray support on X11 (linux)
 o features on MacOSX: overlay number of received messages in dock;
   logouts on sleep and power down
 o status shortcut can be used to login
 o auto join option for groupchat bookmarks
 o reworked the details of TLS/SSL/SASL connection methods
 o avatar in chat dialogs
 o in tabbed chat dialog close commands only close tab
 o added switch for storing prefs on usb stick etc.
 o toggle chat history
 o tabbed groupchats
 o removed all old agents/browse/conference code
 o support for vcard based avatars
 o file cache for avatars